force-app/main/default/objects/Backlog__c/Backlog__c.object-meta.xml
<CustomObject>
    <label>Backlog</label>
    <nameField>
        <displayFormat>BK-{0000}</displayFormat>
        <label>Backlog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backlogs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>