force-app/main/default/objects/Backlog__c/fields/CardLabel1__c.field-meta.xml
<CustomField>
    <fullName>CardLabel1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Card Label 1</label>
    <referenceTo>CardLabel__c</referenceTo>
    <relationshipLabel>Backlogs1</relationshipLabel>
    <relationshipName>Backlogs1</relationshipName>
    <type>Lookup</type>
</CustomField>