force-app/main/default/objects/Backlog__c/fields/CardLabel3__c.field-meta.xml
<CustomField>
    <fullName>CardLabel3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Card Label 3</label>
    <referenceTo>CardLabel__c</referenceTo>
    <relationshipLabel>Backlogs (Card Label)</relationshipLabel>
    <relationshipName>Backlogs3</relationshipName>
    <type>Lookup</type>
</CustomField>