force-app/main/default/objects/Backlog__c/fields/DateLogged__c.field-meta.xml
<CustomField>
    <fullName>DateLogged__c</fullName>
    <label>Date Logged</label>
    <type>Date</type>
</CustomField>