force-app/main/default/objects/Backlog__c/fields/EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>EndDateTime__c</fullName>
    <label>End DateTime</label>
    <type>DateTime</type>
</CustomField>