force-app/main/default/objects/Backlog__c/fields/KanbanColumn__c.field-meta.xml
<CustomField>
    <fullName>KanbanColumn__c</fullName>
    <label>KanbanColumn</label>
    <referenceTo>KanbanColumn__c</referenceTo>
    <relationshipLabel>Backlogs</relationshipLabel>
    <relationshipName>Backlogs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>