force-app/main/default/objects/Backlog__c/fields/NumberOfCardLabels__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCardLabels__c</fullName>
    <formula>If(ISBLANK(CardLabel1__c),0,1)+
If(ISBLANK(CardLabel2__c),0,1)+
If(ISBLANK(CardLabel3__c),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Card Labels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>