force-app/main/default/objects/Backlog__c/fields/PullRequest__c.field-meta.xml
<CustomField>
    <fullName>PullRequest__c</fullName>
    <label>Pull Request</label>
    <type>Url</type>
</CustomField>