force-app/main/default/objects/Backlog__c/fields/Story__c.field-meta.xml
<CustomField>
    <fullName>Story__c</fullName>
    <label>Story</label>
    <type>TextArea</type>
</CustomField>