force-app/main/default/objects/Backlog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Story__c</columns>
    <columns>Stage__c</columns>
    <columns>Project__c</columns>
    <columns>DueDate__c</columns>
    <columns>NumberOfCardLabels__c</columns>
    <columns>CardLabel1__c</columns>
    <columns>StartDateTime__c</columns>
    <columns>EndDateTime__c</columns>
    <columns>CardLabel2__c</columns>
    <columns>PullRequest__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>